trunk/Archive2/61/ea7fcc1cbe5717/output
main.cpp: In function 'int main()':
main.cpp:18:13: error: cannot declare variable 'd' to be of abstract type 'Derived'
     Derived d; 
             ^
main.cpp:9:7: note:   because the following virtual functions are pure within 'Derived':
 class Derived
       ^
main.cpp:6:18: note: 	virtual void Base::unused()
     virtual void unused() = 0; 
                  ^
main.cpp: At global scope:
main.cpp:21:2: warning: extra ';' [-Wpedantic]
 };
  ^
