trunk/Archive2/61/ea7fcc1cbe5717/main.cpp

class Base 
{
public:
    virtual ~Base() {}
    virtual void unused() = 0; 
};

class Derived
:
public Base
{
public:
    ~Derived(); 
};

int main() {
    Derived d; 

    return 0;
};
